syntax = "proto3";

package index;
option go_package = "github.com/objforce/objforce/proto/index;index";

import "google/protobuf/any.proto";

message Document {
	string id = 1;
	string objId = 2;
	map<string, google.protobuf.Any> fields = 3;
}

service DocumentService {
  rpc Create(Document) returns (Document) {}
  rpc Update(Document) returns (Document) {}
  rpc Retrieve(FindDocumentRequest) returns (Document) {}
  rpc Delete(DeleteDocumentRequest) returns (Document) {}
}

message FindDocumentRequest {
  string id = 1;
  string objId = 2;
}

message DeleteDocumentRequest {
  string id = 1;
  string objId = 2;
}
